--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "Node.js Rest Apis with Express, Sequelize and Mysql",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node -r dotenv/config server.js",
+    "dev": "nodemon -r dotenv/config server.js"
   },
   "keywords": [
     "nodejs",
-    "expres",
+    "express",
     "sequelize",
     "mysql",
     "rest",
@@ -17,9 +18,15 @@
   "author": "Mikael Evan",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.1"
+    "password-validator": "^5.3.0",
+    "sequelize": "^6.19.1",
+    "validator": "^13.7.0"
   }
 }
