--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "mysql2": "^2.3.3",
     "password-validator": "^5.3.0",
     "sequelize": "^6.19.1",
