--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "autoprefixer": "10.4.5",
+    "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "sass": "^1.52.1",
+    "sass-loader": "^13.0.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
   },
