--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.8.3",
+    "moment": "^2.29.3",
     "sass": "^1.52.1",
     "sass-loader": "^13.0.0",
     "vue": "^2.6.14",
