Add final README

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,9 +1,9 @@
 PORT = 4000
 
-DB_NAME = db name
+DB_HOST = localhost
 DB_USERNAME = username
 DB_PASSWORD = password
-DB_NAME = name
+DB_NAME = groupomania_db
 
 CRYPTOJS_EMAIL = mettre une clé forte
 JWT_KEY_TOKEN = mettre une clé forte
